<resources>
    <!-- App title -->
    <string name="app_name">RP 2015</string>

    <!-- Navigation Drawer -->
    <string name="home_string">Home</string>
    <string name="about_string">About</string>
    <string name="schedule_string">Schedule</string>
    <string name="faq_string">FAQ</string>

    <!-- Second level menu options -->
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="settings">Settings</string>

    <!--Learn More Links-->
    <string name="learn_more_startup"><u>Startup Fair</u></string>
    <string name="learn_more_career"><u>Career Fair</u></string>
    <string name="learn_more_mechmania"><u>Mechmania</u></string>
    <string name="learn_more_puzzlebang"><u>Puzzlebang</u></string>
    <string name="learn_more_projects"><u>Projects</u></string>

    <!-- About Body Text -->
    <string name="about_body_main_1">
        Reflections | Projections is a tech conference organized and run by students at the University of Illinois at Urbana-Champaign.
    </string>
    <string name="about_body_main_2">
        We draw students, speakers, and companies from across the US and the world. Join us and listen to tech talks from across the industry, to participate in an Artificial Intelligence programming competition in Mechmania, to solve puzzles throughout the conference during PuzzleBang!, and to attend our job and startup fairs.
    </string>
    <string name="about_body_main_3">
        The conference is free and open to anyone regardless of age, major, job, or affiliation with University of Illinois. So come join a discussion led by some of the brightest minds in the business about the bleeding edge of the tech industry!
    </string>
    <string name="career_fair_body">
        The career fair at Reflections | Projections brings in some of the best companies from across the country and they’re all here to meet you! These companies want the cream of the crop and they know that R|P is the place to find it. So whether you’re into security, web development, or natural language processing, whether you’re an expert in your field, starting to get your head on straight, or even brand new to programming, come to our career and startup fairs and get your resume out there!
    </string>
    <string name="startup_fair_body">
        The Startup Fair at Reflections | Projections brings in many of the fastest-growing, most innovative startups from across the country to connect with the most entrepreneurial, driven students at Illinois. If you’re looking to dive off the deep end and work in a fast-paced, dynamic environment with brilliant co-workers, then the Startup Fair is the place for you. Every startup at the fair is offering hands-on experience, the ability to make a meaningful impact, and the chance to challenge yourself and learn faster than ever before. Make sure you attend the Startup Fair to interact with the breakthrough companies of the future.
    </string>
    <string name="projects_body">
        Hacker – “A person who combines excellence, playfulness, cleverness and exploration in performed activities.” ~Wikipedia\n\nHackathon and hacker culture is on the rise, and Illinois has taken it to heart. Many students in ACM@UIUC participate in hackathons, and there are plenty of amazing projects that they have created.\n\nReflections | Projections and HackIllinois proudly present Projects@RP. Our student hackers and innovators will be demoing their projects and showing off the Illini hacker enthusiasm. Projects will range from SIG projects developed over months to hackathon projects created in days. Come see what Illinois hackers are doing!
    </string>
    <string name="puzzlebang_body">
        PuzzleBang is an annual puzzle contest held during ACM R|P conferences where participants complete perplexing problems for a chance to win great prizes! Modelled after decade-old Urbana-Champaign traditions, PuzzleBang brings people together in order to solve classical algorithmic puzzles. Students are encouraged to form teams of 2-4 in order to compete in the week-long puzzle challenge. These problems are geared towards both experienced competitors and new participants alike. If you’ve never competed in a puzzle contest before, don’t be afraid to join in on the fun!\n\nPrizes will be awarded to the top 3 teams and extra follow-up prizes will be given to teams that weren’t in the top three, but did well during the week. Come join us for a great time!
    </string>
    <string name="speakers_string">Speakers</string>
    <string name="maps_string">Maps</string>
</resources>
