<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/about"
            android:checked="false"
            android:icon="@drawable/ic_action_navbar"
            android:title="@string/about_string" />

        <item
            android:id="@+id/schedule"
            android:checked="false"
            android:icon="@drawable/ic_action_navbar"
            android:title="@string/schedule_string" />

        <item
            android:id="@+id/faq"
            android:checked="false"
            android:icon="@drawable/ic_action_navbar"
            android:title="@string/faq_string" />

        <item
            android:id="@+id/speakers"
            android:checked="false"
            android:icon="@drawable/ic_action_navbar"
            android:title="@string/speakers_string" />

        <item
            android:id="@+id/maps"
            android:checked="false"
            android:icon="@drawable/ic_action_navbar"
            android:title="@string/maps_string" />
    </group>
</menu>